fix(security): resolve bloqueio de cors via options e restaura pasta infra